--- a/ui/open-webui/package.json
+++ b/ui/open-webui/package.json
@@ -57,7 +57,9 @@
 		"@xyflow/svelte": "^0.1.19",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
+		"chart.js": "^4.4.5",
 		"codemirror": "^6.0.1",
+		"cors": "^2.8.5",
 		"crc-32": "^1.2.2",
 		"dayjs": "^1.11.10",
 		"dompurify": "^3.1.6",
